[package]
name = "pi_slot_wheel"
version = "0.3.1"
authors = ["zmythleo <zmythleo@gmail.com>"]
edition = "2021"
description = "Multilayer timing wheel with constant generics"
repository = "https://github.com/GaiaWorld/pi_slot_wheel.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "pi_slot_wheel"]

[dependencies]
pi_null = "0.1"
slotmap = { version = "0.2", package = "pi_slotmap" }
pi_slot_deque = "0.3"